# senior-project2

./: .gitignore  CMakeLists.txt  README.md  build.sh  debug.sh  memtest.sh  run.sh  test.sh
glfw/: CMakeLists.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
glfw/docs/: Doxyfile  Makefile  cmake_install.cmake
glfw/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  particles  simple  splitview  wave
glfw/src/: Makefile  cmake_install.cmake  glfw3.pc
glfw/tests/: Makefile  accuracy  clipboard  cmake_install.cmake  cursor  cursoranim  defaults  empty  events  fsaa  gamma  glfwinfo  iconify  joysticks  monitors  peter  reopen  sharing  tearing  threads  title  windows
include/: BoundingBox.hpp  CImg.h  Camera.hpp  Component.hpp  DeferredRenderer.hpp  Drawable.hpp  Entity.hpp  EntityDatabase.hpp  GLSL.hpp  GameMath.hpp  GameObject.hpp  Gbuffer.hpp  Geometry.hpp  Map.hpp  MatrixStack.hpp  ModelConfig.hpp  OverviewCamera.hpp  Program.hpp  Puzzle.hpp  Rooms.hpp  SSAO.hpp  Scene.hpp  Shape.hpp  basic_geometry.hpp  common.hpp  constants.hpp  errors.hpp  log.hpp  resources.hpp  types.h
include/draw/: BatchDraw.hpp  Drawable.hpp  Light.hpp  RenderCommands.hpp  ShadowMap.hpp  Shape.hpp  ShapeBatch.hpp  Text.hpp  Texture.hpp
include/sound/: FMODDriver.hpp
resources/: cat.yaml  comp.yaml  comp_bounds.yaml  computer_archive.yaml  end.yaml  floor.yaml  goal.yaml  hanoi.yaml  hanoi_bounds.yaml  hanoi_room.yaml  lava.yaml  lights.yaml  lounge.yaml  lounge_bounds.yaml  models.yaml  orange.yaml  skull.yaml  sphere.yaml  statue.yaml  tree.yaml  tree_f.yaml  wall.yaml
resources/maps/: game_map.txt  map_level_0_L.tga  map_level_0_L_onelight.tga  map_level_0_big.tga  map_level_1_L.tga  our_map.txt
resources/models/building/: LPBuildX13r_dae.DAE
resources/models/cube/: cavefloor01.dds  cavefloor01_n.dds  cavewall01.dds
resources/puzzles/: logic1.yaml
resources/scripts/: map.py
resources/shaders/: ambient_lighting.fs.glsl  ambient_lighting.vs.glsl  blur.fs.glsl  color_frag.glsl  color_vert.glsl  cube_depth.fs.glsl  cube_depth.vs.glsl  debug_depth.fs.glsl  deferred_geometry_frag.glsl  deferred_geometry_vert.glsl  deferred_lighting_frag.glsl  deferred_lighting_vert.glsl  gbuffer_debug_frag.glsl  null_frag.glsl  null_vert.glsl  screen.fs.glsl  screen.vs.glsl  simple_frag.glsl  simple_vert.glsl  ssao.fs.glsl  text_frag.glsl  text_vert.glsl
resources/text/: access_fail.txt  access_manual_1.txt  access_manual_2.txt  access_manual_3.txt  access_manual_4.txt  access_manual_5.txt  access_manual_contents.txt  access_question_1.txt  access_question_2.txt  access_question_3.txt  access_question_4.txt  access_question_5.txt  access_succeed.txt  employee.txt  facility_purpose.txt  home.txt  map.txt  message.txt  root.txt  root_employee.txt  root_experiment.txt  root_facility_purpose.txt  root_fail.txt  root_lights.txt  root_map.txt  root_message.txt  root_succeed.txt
src/: BoundingBox.cpp  CMakeLists.txt  Camera.cpp  Drawable.cpp  Entity.cpp  EntityDatabase.cc  GLSL.cpp  Gbuffer.cc  Geometry.cpp  Map.cpp  MatrixStack.cpp  OverviewCamera.cpp  Program.cpp  Puzzle.cpp  Rooms.cpp  SSAO.cpp  Shape.cpp  main.cpp  resources.cpp
src/draw/: CMakeLists.txt  Drawable.cpp  Light.cc  RenderCommands.cpp  ShadowMap.cc  Shape.cpp  ShapeBatch.cpp  Text.cpp
src/sound/: CMakeLists.txt  FMODDriver.cpp
